--- a/Joveler.FileMagician/Joveler.FileMagician.nuspec
+++ b/Joveler.FileMagician/Joveler.FileMagician.nuspec
@@ -6,9 +6,9 @@
     <version>1.0.0</version>
     <owners>ied206</owners>
     <authors>Ian F. Darwin, Christos Zoulas, Hajin Jang</authors>
-    <licenseUrl>https://github.com/ied206/Joveler.FileMagician/blob/master/LICENSE</licenseUrl> 
     <projectUrl>https://github.com/ied206/Joveler.FileMagician</projectUrl>
-    <iconUrl>https://github.com/ied206/Joveler.FileMagician/master/Image/Logo.png</iconUrl>
+    <iconUrl>https://github.com/ied206/Joveler.FileMagician/blob/master/Image/Logo.png</iconUrl>
+    <license type="expression">BSD-2-Clause</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# pinvoke library for libmagic (file).
 Supports Windows and Linux.</description>
