--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,10 @@ bld/
 [Ll]og/
 
 # Do not ignore Precompiled directory
-!/Joveler.FileMagician/Precompiled/x86/
-!/Joveler.FileMagician/Precompiled/x64/
-!/Joveler.FileMagician/Precompiled/armhf/
-!/Joveler.FileMagician/Precompiled/arm64/
+!/**/Precompiled/x86/
+!/**/Precompiled/x64/
+!/**/Precompiled/armhf/
+!/**/Precompiled/arm64/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
