--- a/Joveler.FileMagician/Joveler.FileMagician.nuspec
+++ b/Joveler.FileMagician/Joveler.FileMagician.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Joveler.FileMagician</id>
     <title>Joveler.FileMagician</title>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
     <owners>ied206</owners>
     <authors>Ian F. Darwin, Christos Zoulas, Hajin Jang</authors>
     <projectUrl>https://github.com/ied206/Joveler.FileMagician</projectUrl>
@@ -13,7 +13,7 @@
     <description>C# pinvoke library for libmagic (file).
 Supports Windows and Linux.</description>
     <summary>C# pinvoke library for libmagic (file).</summary>
-    <releaseNotes>- New APIs with Span.</releaseNotes>
+    <releaseNotes>- Fix unicode problem on Windows with buffer-based APIs.</releaseNotes>
     <copyright>Copyright (c) 2019 Hajin Jang</copyright>
     <tags>libmagic file pinvoke interop</tags>
     <dependencies>
