--- a/Joveler.FileMagician/Joveler.FileMagician.nuspec
+++ b/Joveler.FileMagician/Joveler.FileMagician.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Joveler.FileMagician</id>
     <title>Joveler.FileMagician</title>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     <owners>ied206</owners>
     <authors>Ian F. Darwin, Christos Zoulas, Hajin Jang</authors>
     <projectUrl>https://github.com/ied206/Joveler.FileMagician</projectUrl>
@@ -13,9 +13,9 @@
     <description>C# pinvoke library for libmagic (file).
 Supports Windows and Linux.</description>
     <summary>C# pinvoke library for libmagic (file).</summary>
-    <releaseNotes>- Fix unicode problem on Windows with buffer-based APIs.</releaseNotes>
+    <releaseNotes>- More proper fix for unicode path handling on Windows.</releaseNotes>
     <copyright>Copyright (c) 2019 Hajin Jang</copyright>
-    <tags>libmagic file pinvoke interop</tags>
+    <tags>libmagic magic file pinvoke interop</tags>
     <dependencies>
       <group targetFramework="net451">
         <dependency id="System.Memory" version="4.5.2" />
