--- a/Joveler.FileMagician/Joveler.FileMagician.csproj
+++ b/Joveler.FileMagician/Joveler.FileMagician.csproj
@@ -2,23 +2,42 @@
   <PropertyGroup>
     <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netstandard2.0</TargetFrameworks>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Version>1.2.1</Version>
+    <PackageId>Joveler.FileMagician</PackageId>
+    <Title>Joveler.FileMagician</Title>
+    <Version>1.3.0</Version>
     <Authors>Ian F. Darwin, Christos Zoulas, Hajin Jang</Authors>
-    <Company />
-    <PackageLicenseExpression>BSD-2-Clause</PackageLicenseExpression>
+    <Company>Joveler</Company>
+    <Description>libmagic (file) pinvoke library for .Net.
+Supports Windows, Linux and macOS.</Description>
     <Copyright>Copyright (c) 2019 Hajin Jang</Copyright>
-    <PackageIconUrl>https://raw.githubusercontent.com/ied206/Joveler.FileMagician/master/Image/Logo.png</PackageIconUrl>
+    <PackageLicenseExpression>BSD-2-Clause</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/ied206/Joveler.FileMagician</PackageProjectUrl>
-    <Description>C# pinvoke library for libmagic (file).
-Supports Windows and Linux.</Description>
-    <PackageReleaseNotes>- More proper fix for unicode path handling on Windows.</PackageReleaseNotes>
-    <PackageTags>libmagic magic file pinvoke interop</PackageTags>
+    <PackageIcon>images\Logo.png</PackageIcon>
+    <RepositoryUrl>https://github.com/ied206/Joveler.FileMagician</RepositoryUrl>
+    <PackageReleaseNotes>- Update included libmagic to 5.37 from 5.36
+- Support macOS platform
+- Apply improved native library loader (Joveler.DynLoader)</PackageReleaseNotes>
+    <PackageTags>libmagic magic file native pinvoke interop</PackageTags>
   </PropertyGroup>
   <Import Project="$(MSBuildProjectDirectory)\Joveler.FileMagician.targets" />
   <ItemGroup>
-    <PackageReference Include="Joveler.DynLoader" Version="1.1.0" />
+    <PackageReference Include="Joveler.DynLoader" Version="1.2.0" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
+    <!-- Nuget Pacakge Icon -->
+    <None Include="..\Image\Logo.png" Pack="true" PackagePath="images\" />
+    <!-- .Net Framework 4.5.1 -->
+    <None Include="Joveler.FileMagician.targets" Pack="true" PackagePath="build\net451" />
+    <None Include="Precompiled\magic.mgc" Pack="true" PackagePath="build\net451\Precompiled\magic.mgc" />
+    <None Include="Precompiled\x86\*.dll" Pack="true" PackagePath="build\net451\Precompiled\x86" />
+    <None Include="Precompiled\x64\*.dll" Pack="true" PackagePath="build\net451\Precompiled\x64" />
+    <!-- .Net Standard 2.0 -->
+    <None Include="Joveler.FileMagician.targets" Pack="true" PackagePath="build\netstandard2.0" />
+    <None Include="Precompiled\magic.mgc" Pack="true" PackagePath="build\netstandard2.0\Precompiled\magic.mgc" />
+    <None Include="Precompiled\x86\*" Pack="true" PackagePath="build\netstandard2.0\Precompiled\x86" />
+    <None Include="Precompiled\x64\*" Pack="true" PackagePath="build\netstandard2.0\Precompiled\x64" />
+    <None Include="Precompiled\armhf\*" Pack="true" PackagePath="build\netstandard2.0\Precompiled\armhf" />
+    <None Include="Precompiled\arm64\*" Pack="true" PackagePath="build\netstandard2.0\Precompiled\arm64" />
   </ItemGroup>
 </Project>
