--- a/Joveler.FileMagician/Joveler.FileMagician.csproj
+++ b/Joveler.FileMagician/Joveler.FileMagician.csproj
@@ -25,78 +25,53 @@ Supports Windows, Linux and macOS.</Description>
     <PackageReference Include="System.Memory" Version="4.5.4" Condition=" '$(TargetFramework)' == 'net451' or '$(TargetFramework)' == 'netstandard2.0' "/>
   </ItemGroup>
   <!-- Shared NuGet Files -->
+  <!-- Pack/PackagePath: for NuGet package, Link/CopyToOutputDirectory: for project reference -->
   <ItemGroup>
     <!-- NuGet Pacakge Icon -->
     <None Include="..\Image\Logo.png" Pack="true" PackagePath="images\" />
     <!-- Magic Database -->
-    <None Include="Precompiled\magic.mgc"   Pack="true">
-      <Link>%(FileName)%(Extension)</Link>
-      <PackagePath>content\</PackagePath>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="runtimes\magic.mgc"   Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>content\magic.mgc</PackagePath> <!-- NuGet Package Path -->
     </None>
   </ItemGroup>
   <!-- .NET Framework 4.5.1 -->
-  <Import Condition=" '$(TargetFramework)' == 'net451' " Project="$(MSBuildProjectDirectory)\Joveler.FileMagician.netfx.targets"/>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <!-- .NET Framework 4.5.1 -->
-    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net451" />
-    <None Include="Precompiled\x86\*.dll"   Pack="true" PackagePath="build\net451\Precompiled\x86" />
-    <None Include="Precompiled\x64\*.dll"   Pack="true" PackagePath="build\net451\Precompiled\x64" />
-  </ItemGroup>
-  <!-- .NET Standard 2.0 -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <!-- Pack/PackagePath: for NuGet package, Link/CopyToOutputDirectory: for project reference -->
-    <None Include="Precompiled\x86\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\win-x86\native\netstandard2.0\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\win-x86\native\netstandard2.0</PackagePath>
+    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net451\Joveler.FileMagician.netfx.targets"/> <!-- NuGet only -->
+    <None Include="runtimes\win-x86\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>x86\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>build\net451\Precompiled\x86</PackagePath> <!-- NuGet Package Path -->
     </None>
-    <None Include="Precompiled\x64\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\win-x64\native\netstandard2.0\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\win-x64\native\netstandard2.0</PackagePath>
-    </None>
-    <None Include="Precompiled\x64\*.so"    Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\linux-x64\native\netstandard2.0\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\linux-x64\native\netstandard2.0</PackagePath>
-    </None>
-    <None Include="Precompiled\armhf\*.so"  Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\linux-arm\native\netstandard2.0\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\linux-arm\native\netstandard2.0</PackagePath>
-    </None>
-    <None Include="Precompiled\arm64\*.so"  Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\linux-arm64\native\netstandard2.0\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\linux-arm64\native\netstandard2.0</PackagePath>
-    </None>
-    <None Include="Precompiled\x64\*.dylib" Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\osx-x64\native\netstandard2.0\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\osx-x64\native\netstandard2.0</PackagePath>
+    <None Include="runtimes\win-x64\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>x64\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>build\net451\Precompiled\x64</PackagePath> <!-- NuGet Package Path -->
     </None>
   </ItemGroup>
-  <!-- .NET Standard 2.1 -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-    <!-- Pack/PackagePath: for NuGet package, Link/CopyToOutputDirectory: for project reference -->
-    <None Include="Precompiled\x86\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\win-x86\native\netstandard2.1\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\win-x86\native\netstandard2.1</PackagePath>
+  <!-- .NET Standard 2.0 & 2.1 -->
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netstandard2.1'">
+    <None Include="runtimes\win-x86\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>runtimes\win-x86\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>runtimes\win-x86\native</PackagePath> <!-- NuGet Package Path -->
     </None>
-    <None Include="Precompiled\x64\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\win-x64\native\netstandard2.1\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\win-x64\native\netstandard2.1</PackagePath>
+    <None Include="runtimes\win-x64\*.dll"   Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>runtimes\win-x64\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>runtimes\win-x64\native</PackagePath> <!-- NuGet Package Path -->
     </None>
-    <None Include="Precompiled\x64\*.so"    Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\linux-x64\native\netstandard2.1\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\linux-x64\native\netstandard2.1</PackagePath>
+    <None Include="runtimes\linux-x64\*.so"    Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>runtimes\linux-x64\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>runtimes\linux-x64\native</PackagePath> <!-- NuGet Package Path -->
     </None>
-    <None Include="Precompiled\armhf\*.so"  Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\linux-arm\native\netstandard2.1\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\linux-arm\native\netstandard2.1</PackagePath>
+    <None Include="runtimes\linux-arm\*.so"  Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>runtimes\linux-arm\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>runtimes\linux-arm\native</PackagePath> <!-- NuGet Package Path -->
     </None>
-    <None Include="Precompiled\arm64\*.so"  Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\linux-arm64\native\netstandard2.1\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\linux-arm64\native\netstandard2.1</PackagePath>
+    <None Include="runtimes\linux-arm64\*.so"  Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>runtimes\linux-arm64\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>runtimes\linux-arm64\native</PackagePath> <!-- NuGet Package Path -->
     </None>
-    <None Include="Precompiled\x64\*.dylib" Pack="true" CopyToOutputDirectory="PreserveNewest">
-      <Link>runtimes\osx-x64\native\netstandard2.1\%(FileName)%(Extension)</Link>
-      <PackagePath>runtimes\osx-x64\native\netstandard2.1</PackagePath>
+    <None Include="runtimes\osx-x64\*.dylib" Pack="true" CopyToOutputDirectory="PreserveNewest">
+      <Link>runtimes\osx-x64\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
+      <PackagePath>runtimes\osx-x64\native</PackagePath> <!-- NuGet Package Path -->
     </None>
   </ItemGroup>
 </Project>
