--- a/Joveler.FileMagician/Joveler.FileMagician.netfx.targets
+++ b/Joveler.FileMagician/Joveler.FileMagician.netfx.targets
@@ -19,6 +19,7 @@
   -->
   <PropertyGroup>
     <ExcludeInteropLib Condition="Exists('$(MSBuildProjectDirectory)\Joveler.FileMagician.Lib.Exclude')">true</ExcludeInteropLib>
+    <ExcludeInteropMgc Condition="Exists('$(MSBuildProjectDirectory)\Joveler.FileMagician.Mgc.Exclude')">true</ExcludeInteropMgc>
   </PropertyGroup>
 
  <!--
@@ -32,7 +33,11 @@
                         HasTrailingSlash('$(MSBuildThisFileDirectory)')">
     <InteropLibFiles_x86 Include="$(MSBuildThisFileDirectory)..\..\runtimes\win-x86\native\*.dll" />
     <InteropLibFiles_x64 Include="$(MSBuildThisFileDirectory)..\..\runtimes\win-x64\native\*.dll" />
-    <InteropLibFiles_mgc Include="$(MSBuildThisFileDirectory)..\..\contentFiles\any\any\*" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(ExcludeInteropMgc)' != 'true' And 
+                        '$(MSBuildThisFileDirectory)' != '' And
+                        HasTrailingSlash('$(MSBuildThisFileDirectory)')">
+    <InteropMgcFiles Include="$(MSBuildThisFileDirectory)..\..\contentFiles\any\any\*" />
   </ItemGroup>
 
   <!--
@@ -50,7 +55,9 @@
       <Link>x64\%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Condition="'@(InteropLibFiles_mgc)' != ''" Include="@(InteropLibFiles_mgc)">
+  </ItemGroup>
+  <ItemGroup Condition="'$(ExcludeInteropMgc)' != 'true'">
+    <None Condition="'@(InteropMgcFiles)' != ''" Include="@(InteropMgcFiles)">
       <Link>%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -82,15 +89,15 @@
     <Copy SourceFiles="@(InteropLibFiles_x64)"
           DestinationFiles="@(InteropLibFiles_x64 -> '$(OutDir)x64\%(Filename)%(Extension)')" />
   </Target>
-  <Target Name="CopyInteropLibFiles_mgc"
-          Condition="'$(CopyInteropLibFiles_mgc)' != 'false' And
+  <Target Name="CopyInteropMgcFiles"
+          Condition="'$(CopyInteropMgcFiles)' != 'false' And
                       '$(OutDir)' != '' And
                       HasTrailingSlash('$(OutDir)') And
                       Exists('$(OutDir)')"
-          Inputs="@(InteropLibFiles_mgc)"
-          Outputs="@(InteropLibFiles_mgc -> '$(OutDir)x86\%(Filename)%(Extension)')">
-    <Copy SourceFiles="@(InteropLibFiles_mgc)"
-          DestinationFiles="@(InteropLibFiles_mgc -> '$(OutDir)%(Filename)%(Extension)')" />
+          Inputs="@(InteropMgcFiles)"
+          Outputs="@(InteropMgcFiles -> '$(OutDir)x86\%(Filename)%(Extension)')">
+    <Copy SourceFiles="@(InteropMgcFiles)"
+          DestinationFiles="@(InteropMgcFiles -> '$(OutDir)%(Filename)%(Extension)')" />
   </Target>
 
   <!--
@@ -111,12 +118,41 @@
                      Exists('$(OutDir)')">
     <Delete Files="@(InteropLibFiles_x64 -> '$(OutDir)x64\%(Filename)%(Extension)')" />
   </Target>
-  <Target Name="CleanInteropLibFiles_mgc"
-          Condition="'$(CleanInteropLibFiles_mgc)' != 'false' And
+  <Target Name="CleanInteropMgcFiles"
+          Condition="'$(CleanInteropMgcFiles)' != 'false' And
                      '$(OutDir)' != '' And
                      HasTrailingSlash('$(OutDir)') And
                      Exists('$(OutDir)')">
-    <Delete Files="@(InteropLibFiles_mgc -> '$(OutDir)mgc\%(Filename)%(Extension)')" />
+    <Delete Files="@(InteropMgcFiles -> '$(OutDir)mgc\%(Filename)%(Extension)')" />
+  </Target>
+
+  <!--
+  ******************************************************************************
+  -->
+
+  <Target Name="CollectInteropLibFiles_x86"
+          Condition="'$(CollectInteropLibFiles_x86)' != 'false'">
+    <ItemGroup>
+      <FilesForPackagingFromProject Include="@(InteropLibFiles_x86)">
+        <DestinationRelativePath>bin\x86\%(Filename)%(Extension)</DestinationRelativePath>
+      </FilesForPackagingFromProject>
+    </ItemGroup>
+  </Target>
+  <Target Name="CollectInteropLibFiles_x64"
+          Condition="'$(CollectInteropLibFiles_x64)' != 'false'">
+    <ItemGroup>
+      <FilesForPackagingFromProject Include="@(InteropLibFiles_x64)">
+        <DestinationRelativePath>bin\x64\%(Filename)%(Extension)</DestinationRelativePath>
+      </FilesForPackagingFromProject>
+    </ItemGroup>
+  </Target>
+  <Target Name="CollectInteropMgcFiles"
+          Condition="'$(CollectInteropMgcFiles)' != 'false'">
+    <ItemGroup>
+      <FilesForPackagingFromProject Include="@(InteropMgcFiles)">
+        <DestinationRelativePath>bin\%(Filename)%(Extension)</DestinationRelativePath>
+      </FilesForPackagingFromProject>
+    </ItemGroup>
   </Target>
 
   <!--
@@ -130,19 +166,40 @@
       $(PostBuildEventDependsOn);
       CopyInteropLibFiles_x86;
       CopyInteropLibFiles_x64;
-      CopyInteropLibFiles_mgc;
+      CopyInteropMgcFiles;
     </PostBuildEventDependsOn>
     <BuildDependsOn>
       $(BuildDependsOn);
       CopyInteropLibFiles_x86;
       CopyInteropLibFiles_x64;
-      CopyInteropLibFiles_mgc;
+      CopyInteropMgcFiles;
     </BuildDependsOn>
     <CleanDependsOn>
       $(CleanDependsOn);
       CleanInteropLibFiles_x86;
       CleanInteropLibFiles_x64;
-      CleanInteropLibFiles_mgc;
+      CleanInteropMgcFiles;
     </CleanDependsOn>
+  </PropertyGroup>
+
+  <!--
+  ******************************************************************************
+  **         Interop Library Publish Properties for Visual Studio 201x        **
+  ******************************************************************************
+  -->
+
+  <PropertyGroup Condition="'$(VisualStudioVersion)' == '' Or
+                            '$(VisualStudioVersion)' == '10.0' Or
+                            '$(VisualStudioVersion)' == '11.0' Or
+                            '$(VisualStudioVersion)' == '12.0' Or
+                            '$(VisualStudioVersion)' == '14.0' Or
+                            '$(VisualStudioVersion)' == '15.0' Or
+                            '$(VisualStudioVersion)' == '16.0'">
+    <PipelineCollectFilesPhaseDependsOn>
+      CollectInteropLibFiles_x86;
+      CollectInteropLibFiles_x64;
+      CollectInteropMgcFiles;
+      $(PipelineCollectFilesPhaseDependsOn);
+    </PipelineCollectFilesPhaseDependsOn>
   </PropertyGroup>
 </Project>
